src/w8/Assement Summary
See the Assessment Guide for information on how to interpret this report.

ASSESSMENT SUMMARY

Compilation:  FAILED (2 errors, 0 warnings)
API:          FAILED (1 error)

Findbugs:     No tests available for autograding.
PMD:          PASSED
Checkstyle:   No tests available for autograding.

Correctness:  No tests available for autograding.
Memory:       No tests available for autograding.
Timing:       No tests available for autograding.

Aggregate score: 0.00%
[Compilation: 5%, API: 5%, Findbugs: 0%, PMD: 0%, Checkstyle: 0%, Correctness: 60%, Memory: 10%, Timing: 20%]

ASSESSMENT DETAILS

The following files were submitted:
----------------------------------
6.5K Mar  4 10:42 SeamCarver.java


********************************************************************************
*  COMPILING
********************************************************************************


% javac SeamCarver.java
*-----------------------------------------------------------
SeamCarver.java:1: error: illegal character: '\ufeff'
?import edu.princeton.cs.algs4.AcyclicSP;
^
SeamCarver.java:1: error: class, interface, or enum expected
?import edu.princeton.cs.algs4.AcyclicSP;
        ^
2 errors


================================================================


Checking the APIs of your programs.
*-----------------------------------------------------------
SeamCarver: The file 'SeamCarver.class' could not be found.

================================================================


ABORTING: either the compilation or API test failed.